[package]
name = "pydustmasker"
version = "1.0.0"
description = "Python bindings to DustMasker, a utility to identify and mask low-complexity regions in nucleotide sequences"
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
name = "_pydustmasker"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module"] }
thiserror = "1.0.63"
