[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pydustmasker"
description = "Python bindings to DustMasker, a utility to identify and mask low-complexity regions in nucleotide sequences"
authors = [{ name = "Antonio Camargo", email = "antoniop.camargo@gmail.com" }]
license = "MIT"
readme = "README.md"

[tool.maturin]
module-name = "pydustmasker._pydustmasker"
binding = "pyo3"
features = ["pyo3/extension-module"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=pydustmasker --cov-report term-missing --no-cov-on-fail"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
line-length = 89
target-version = "py39"
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "B",    # flake8-bugbear
    "W",    # Warning
    "F",    # pyflakes
    "UP",   # pyupgrade
    "I001", # unsorted-imports
    "T201", # print found
    "T203", # pprint found
]
ignore = [
    # Recommended ignores by ruff when using formatter
    "E501",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]
